<resources>
    <string name="a_empty">""</string>
    <string name="a_zero_euro">"0€"</string>
    <string name="a_placeholder_password">"••••••••••"</string>
    <string name="dialog_title_note">"Note"</string>
    <string name="dialog_technical_error_title">"Oops…"</string>
    <string name="dialog_technical_error_message">"Unfortunately, something went wrong. Please try again later."</string>
    <string name="dialog_update_app_message">"Update"</string>
    <string name="dialog_message_unsupported">"This feature is currently not supported."</string>
    <string name="dialog_login_required_title">"Please log in"</string>
    <string name="dialog_login_required_btn_later">"Later"</string>
    <string name="dialog_login_required_btn_login">"Login"</string>
    <string name="dialog_login_required_message">"Please log in to use this feature."</string>
    <string name="dialog_permission_message">"You can change the app permissions in the settings at any time."</string>
    <string name="service_error_title">@string/dialog_technical_error_title</string>
    <string name="service_error_description">"The service is currently not available. Please try again later."</string>
    <string name="service_unavailable_title">"Coming soon!"</string>
    <string name="service_unavailable_description">"This feature is currently being prepared for your city. Please check back later."</string>
    <string name="h_001_navigation_bar_btn_citizen_services">"Services"</string>
    <string name="h_001_navigation_bar_btn_home">"Home"</string>
    <string name="h_001_navigation_bar_btn_infobox">"Mailbox"</string>
    <string name="h_001_navigation_bar_btn_market_place">"Marketplace"</string>
    <string name="a_message_nfc_not_enabled">"NFC is not enabled. Please enable and try again."</string>
    <string name="a_message_nfc_not_supported">"NFC is not supported by your device."</string>
    <string name="p_001_profile_title">"Profile"</string>
    <string name="p_001_profile_btn_imprint">"Imprint"</string>
    <string name="p_001_profile_btn_logout">"Logout"</string>
    <string name="p_001_profile_label_password">"Password"</string>
    <string name="p_001_profile_label_account_settings">"User account"</string>
    <string name="p_001_profile_label_birthday">"Date of birth"</string>
    <string name="p_001_profile_label_data_security">"Data Privacy Notice"</string>
    <string name="p_001_profile_label_email">"E-mail"</string>
    <string name="p_001_profile_label_first_name">"First name"</string>
    <string name="p_001_profile_label_last_name">"Last name"</string>
    <string name="p_001_profile_label_personal_data">"Personal details"</string>
    <string name="p_001_profile_label_residence">"Residence"</string>
    <string name="p_002_profile_settings_label_email">"E-mail"</string>
    <string name="p_002_profile_settings_label_password">"Password"</string>
    <string name="p_003_profile_email_change_title">"Update e-mail"</string>
    <string name="p_003_profile_email_change_btn_save">"Save"</string>
    <string name="p_003_profile_email_change_hint_cur_email">"Current e-mail"</string>
    <string name="p_003_profile_email_change_hint_new_email">"New e-mail"</string>
    <string name="p_003_profile_email_change_error_invalid_email">"E-mail address is invalid"</string>
    <string name="p_004_profile_email_changed_title">"Confirm your e-mail"</string>
    <string name="p_004_profile_email_changed_btn_resend">"Try again"</string>
    <string name="p_004_profile_email_changed_info_not_received">"Didn\'t receive a confirmation link?"</string>
    <string name="p_004_profile_email_changed_info_received">"You can now log into your account with your new login details."</string>
    <string name="p_004_profile_email_changed_info_sent_mail">"You have successfully updated your e-mail address."</string>
    <string name="p_004_profile_email_changed_info_sent_link">"We\'ve e-mailed you a new confirmation link."</string>
    <string name="p_005_profile_password_change_title">"Change Password"</string>
    <string name="p_005_profile_password_change_btn_forgot_password">"Forgot your password?"</string>
    <string name="p_005_profile_password_change_btn_save">"Save"</string>
    <string name="p_005_profile_password_change_hint_cur_password">"Current password"</string>
    <string name="p_005_profile_password_change_hint_new_password">"New password"</string>
    <string name="p_005_profile_password_change_hint_repeat_password">"Confirm new password"</string>
    <string name="p_005_profile_password_change_hint_strength">"Please use: %s"</string>
    <string name="p_005_profile_password_change_info_strength_strong">"Strong password"</string>
    <string name="p_005_profile_password_change_error_no_match">"Passwords do not match"</string>
    <string name="p_005_profile_password_change_error_too_weak">"Password is too weak"</string>
    <string name="p_005_profile_password_change_error_empty_field">"This field is required"</string>
    <string name="p_006_profile_password_changed_title">"Password changed"</string>
    <string name="p_006_profile_password_changed_info_done">"You have successfully changed your password."</string>
    <string name="p_006_profile_password_changed_info_next">"You can now log into your account with your new login details."</string>
    <string name="l_001_login_title">"Login"</string>
    <string name="l_001_login_btn_forgot_password">"Did you forget your password?"</string>
    <string name="l_001_login_btn_imprint">"Imprint"</string>
    <string name="l_001_login_btn_login">"Login"</string>
    <string name="l_001_login_btn_privacy_short">"Data Privacy Notice"</string>
    <string name="l_001_login_btn_register">"Register now"</string>
    <string name="l_001_login_checkbox_stay_loggedin">"Keep me logged in"</string>
    <string name="l_001_login_hint_email">"E-mail"</string>
    <string name="l_001_login_hint_password">"Password"</string>
    <string name="l_001_login_info_not_registered">"Not registered yet?"</string>
    <string name="l_001_login_error_password_wrong">"The password is incorrect."</string>
    <string name="l_002_login_locked_account_title">"Account locked."</string>
    <string name="l_002_login_locked_account_info">"Your account is temporarily locked due to 4 failed login attempts."</string>
    <string name="l_004_login_confirm_email_title">"Confirm your e-mail"</string>
    <string name="l_004_login_confirm_email_btn_resend">"Resend e-mail"</string>
    <string name="l_004_login_confirm_email_info_sent_link">"We\'ve sent a new confirmation link to your e-mail address. Resending is only available once. "</string>
    <string name="l_004_login_confirm_email_info_check_inbox">"The address %s has not been confirmed yet. Please check your inbox for the verification PIN."</string>
    <string name="l_004_login_confirm_email_info_click_link">"Please click on the confirmation link to log in to your account."</string>
    <string name="l_004_login_confirm_email_info_not_received">"Didn\'t receive a confirmation link?"</string>
    <string name="r_001_registration_title">"Registration"</string>
    <string name="r_001_registration_btn_register">"Register"</string>
    <string name="r_001_registration_label_agreement_abstract">"I have read and agree to the %s"</string>
    <string name="r_001_registration_label_agreement_privacy">"Data Privacy Notice"</string>
    <string name="r_001_registration_label_agreement_terms">"Terms &amp; Conditions"</string>
    <string name="r_001_registration_label_check_terms">"I have read and agree to the Terms &amp; Conditions"</string>
    <string name="r_001_registration_label_consent_required">"Your consent is required."</string>
    <string name="r_001_registration_label_read_security">"I have read and agree to the Data Security Information"</string>
    <string name="r_001_registration_hint_password_strength">"Please use: %s"</string>
    <string name="r_001_registration_hint_password_strong">"Strong password"</string>
    <string name="r_001_registration_hint_birthday">"Date of birth (OPTIONAL)"</string>
    <string name="r_001_registration_hint_email">"E-mail"</string>
    <string name="r_001_registration_hint_first_name">"First name"</string>
    <string name="r_001_registration_hint_last_name">"Last name"</string>
    <string name="r_001_registration_hint_password">"Password"</string>
    <string name="r_001_registration_hint_password_repeat">"Confirm password"</string>
    <string name="r_001_registration_error_password_no_match">"Passwords do not match"</string>
    <string name="r_001_registration_error_password_too_weak">"Too weak"</string>
    <string name="r_001_registration_error_empty_field">"Required field"</string>
    <string name="r_001_registration_p_005_profile_password_strength_label">"Password strength"</string>
    <string name="r_001_registration_p_005_profile_password_strength_hint_min_8_chars">"minimum 8 characters"</string>
    <string name="r_001_registration_p_005_profile_password_strength_error_min_1_symbol">"at least one symbol"</string>
    <string name="r_004_registration_confirmation_title">"Confirm your e-mail"</string>
    <string name="r_004_registration_confirmation_btn_resend">"Resend e-mail"</string>
    <string name="r_004_registration_confirmation_info_click_link">"Please click on the confirmation link to log in to your account."</string>
    <string name="r_004_registration_confirmation_info_not_received">"Didn\'t receive the PIN?"</string>
    <string name="r_004_registration_confirmation_info_sent_link">"We e-mailed you a new confirmation PIN. Resending is only available once. "</string>
    <string name="r_004_registration_confirmation_info_sent_mail">"We have sent a verification PIN to your address %s"</string>
    <string name="r_004_registration_confirmation_dialog_failed_title">"Registration not possible"</string>
    <string name="r_004_registration_confirmation_dialog_failed_content">"Unfortunately, something went wrong. Please try again."</string>
    <string name="f_001_forgot_password_title">"Reset password"</string>
    <string name="f_001_forgot_password_btn_reset_password">"Reset password"</string>
    <string name="f_001_forgot_password_btn_resend_mail">"Resend e-mail"</string>
    <string name="d_002_delete_account_validation_info">"Confirm account deletion by entering your password."</string>
    <string name="d_002_delete_account_validation_button_text">"Confirm deletion"</string>
    <string name="l_001_login_hint_technical_logout">"Unfortunately something went wrong and you were logged out. Please log in again."</string>
    <string name="h_001_navigation_bar_btn_imprint">"Imprint"</string>
    <string name="p_001_profile_help_section_header">"Help"</string>
    <string name="p_001_profile_help_link_label">"Open Citykey Help Website"</string>
    <string name="p_001_profile_accessibilty_disclaimer_label">"Accessibility Statement"</string>
    <string name="p_003_change_dob_old_date">"CURRENT DATE OF BIRTH"</string>
    <string name="p_003_change_dob_new_date">"NEW DATE OF BIRTH"</string>
    <string name="p_003_change_dob_save_btn">"Save"</string>
    <string name="p_001_profile_label_data_security_settings">"Data Privacy Settings"</string>
    <string name="p_001_profile_feedback_label">"Feedback"</string>
    <string name="p_003_change_dob_delete_dob_btn">"Delete date of birth"</string>
    <string name="p_001_profile_software_license_label">"License"</string>
    <string name="wn_001_what_is_new_title">"What is new?"</string>
    <string name="wn_002_news_widget_title">"Widgets for news &amp; waste calendar"</string>
    <string name="wn_003_news_widget_update_description">"It is now possible to display the news and appointments of the waste calendar outside the Citykey app in a widget."</string>
    <string name="wn_004_continue_title">"Continue…"</string>
</resources>