<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/auth_bottom_sheet_rounded"
    android:orientation="vertical">

    <com.google.android.material.textview.MaterialTextView
        style="@style/RobotoBold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="16dp"
        android:paddingBottom="18dp"
        android:text="@string/wn_001_what_is_new_title"
        android:textAlignment="center"
        android:textColor="@color/onSurface"
        android:textSize="24sp" />

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="wrap_content"
        android:layout_height="180dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="46dp"
        app:srcCompat="@drawable/ic_whats_new_in_app" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/title"
        style="@style/RobotoBold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/global_content_margins"
        android:layout_marginTop="41dp"
        android:layout_marginEnd="@dimen/global_content_margins"
        android:text="@string/wn_002_news_widget_title"
        android:textColor="@color/onSurface"
        android:textSize="17sp" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/description"
        style="@style/RobotoRegular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/global_content_margins"
        android:layout_marginEnd="@dimen/global_content_margins"
        android:text="@string/wn_003_news_widget_update_description"
        android:textColor="@color/onSurface"
        android:textSize="17sp" />

    <androidx.legacy.widget.Space
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1" />

    <com.telekom.citykey.custom.views.ProgressButton
        android:id="@+id/btnContinue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="58dp"
        android:layout_marginEnd="57dp"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:paddingBottom="47dp"
        app:text="@string/wn_004_continue_title" />

</androidx.appcompat.widget.LinearLayoutCompat>
